# Homework-16

EX1/: CMakeLists.txt  EX1.cpp  EX1.h
EX2/: CMakeLists.txt
EX2/EX2/: CMakeLists.txt  EX2.cpp  EX2.h
EX3/: CMakeLists.txt
EX3/EX3/: CMakeLists.txt  EX3.cpp  EX3.h
EX4/: CMakeLists.txt  EX4.cpp  EX4.h
EX5/: CMakeLists.txt  EX5.cpp  EX5.h
