# CMakeList.txt: проект CMake для EX4; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("EX4")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (EX4 "EX4.cpp" "EX4.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
