# CMakeList.txt: проект CMake для EX5; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("EX5")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (EX5 "EX5.cpp" "EX5.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
